Fix selectmenu overflow in Firefox

--- a/src/assets/sass/modules/jquery-ui/_selectmenu.scss
+++ b/src/assets/sass/modules/jquery-ui/_selectmenu.scss
@@ -68,7 +68,7 @@
 
     span.ui-selectmenu-text {
         display: block;
-        padding: 0.35714285714286em 2.1em 0.35714285714286em 0.35714285714286em; // 5px / 14px
+        padding: 0.35714285714286em 1.75em 0.35714285714286em 0.35714285714286em; // 5px / 14px
         text-align: left;
         text-overflow: ellipsis;
         white-space: nowrap;
